@@ -1,3 +1,8 @@
+2003-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/windows.html: Add downloadable link to
+	example-1.ly and instruction to double click.
+
 2003-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html (cygwin): Add note about autogen.sh.
